# Simpleoverflowhelper

./: .gitignore  1-fuzzer.py  2-offset-template.py  3-verify-overwritten.py  4-find-badchars-template.py  5-verifiy-jmp-pointer-template.py  6-get-reverse-shell.py  README.md  config.toml  config.toml.example  draft.py  generate-bit-hex-rust  generate-bit-hex.py  simpleoverflowhelper.py
dev/generate-bit-hex-rust/: Cargo.toml  command.txt
dev/generate-bit-hex-rust/.cargo/: config
dev/generate-bit-hex-rust/src/: main.rs
